--- a/package.json
+++ b/package.json
@@ -11,17 +11,24 @@
     "@testing-library/user-event": "^12.6.3",
     "@types/jest": "^26.0.20",
     "@types/node": "^12.19.15",
+    "@types/node-sass": "^4.11.1",
     "@types/react": "^16.14.3",
+    "@types/react-bootstrap": "^0.32.25",
     "@types/react-dom": "^16.9.10",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
+    "@types/sass": "^1.16.0",
+    "bootstrap": "^4.6.0",
     "ionicons": "^5.4.0",
+    "node-sass": "^4.14.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "typescript": "^4.1.3",
+    "uuid": "^8.3.2",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
@@ -61,7 +68,8 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "3.0.0"
+    "@capacitor/cli": "3.0.0",
+    "@types/uuid": "^8.3.0"
   },
   "description": "An Ionic project"
 }
